# UnityPrototype4

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Directory.Build.props  Makefile  README.md  Readme.md  UnityPrototype4.sln.DotSettings  codegen.bat  pyproject.toml
.github/workflows/: ci.yml  documentation.yml  doxygen-gh-pages.yml  doxygen-test.yml
Assets/: GameplayUIManager.cs  Stable_Panel.cs  packages.config
Assets/Art/Fonts/: LazyFox Pixel Font 1 SDF 1.asset  LazyFox Pixel Font 1 SDF.asset  LazyFox Pixel Font 2 SDF 1.asset  LazyFox Pixel Font 2 SDF.asset  LazyFox Pixel Font 3 SDF 1.asset  LazyFox Pixel Font 3 SDF.asset
Assets/Art/Sprites/: .Atlas.ftpp  Atlas.tpsheet  TilesAtlas.spriteatlasv2
Assets/Art/Tiles/: CavesAndRails.prefab  Debug.prefab  DebugTile1.asset  DebugTile2.asset  DebugTile3.asset  DebugTile4.asset  DebugTile5.asset  DebugTile6.asset  DebugTile7.asset  (+632 more)
Assets/Prefabs/: BuildingsTilemap Variant.prefab  Human.prefab  Item.prefab  Locomotive.prefab  NavmeshSurface2D.prefab  Tilemap.prefab  Wagon.prefab
Assets/Resources/: Localization.csv
Assets/Scenes/: 2_Gameplay.unity  P_Feedbacks.unity  P_Hulvdan.unity  SampleScene.unity
Assets/Scriptables/: Inputs.inputactions
Cmd/: codegen.bat  doc.bat  make.py
Cmd/Rider/: Directory.Build.props.j2  codegen_rider.py
Docs/: CREDITS.md  DEVELOPMENT.md  Resource Production.md
Docs/Feature Design Docs/: questioning_overheads.md  resource_production.md
Docs/doxygen/: Doxyfile  override.css
ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  ProjectSettings.asset
(+377 files in other folders)
