[tool.poetry]
name = "unityprototype4"
version = "0.1.0"
description = ""
authors = ["Aleksei Chistov <aleksey.chistov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

jinja2 = "^3.1.2"
typer = {extras = ["all"], version = "^0.9.0"}
watchdog = "^3.0.0"
black = "^23.12.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true
